<resources>
    <string name="app_name">Книга рецептов</string>
    <string name="title">Заголовок</string>
    <string name="description">Описание</string>
    <string name="recipe_name_hint">Введите название рецепта</string>
    <string name="recipe_description_hint">Кратко опишите рецепт</string>
    <string name="create">Создать</string>
    <string name="ingredient_hint">Введите название ингредиента</string>
    <string name="plus">+</string>
    <string name="add_ingredient">Добавить ингредиент +</string>
    <string name="search">Поиск</string>
    <string name="ingredients">Ингредиенты</string>
    <string name="recipe_image">recipe_image</string>
    <string name="ingredients_list">Ингредиенты:</string>
    <string name="enter_full_recipe">Введите полный рецепт</string>
    <string name="dots">⋮</string>
    <string name="recipe_img">Фото рецепта</string>
    <string name="delete">Удалить</string>
    <string name="edit">Редактировать</string>
    <string name="amount">Кол-во</string>
    <string name="line">-</string>
</resources>