<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_pick_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="15dp"
            android:src="@drawable/placeholder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_recipe_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:hint="@string/recipe_name_hint"
            android:inputType="textCapSentences"
            android:maxWidth="270dp"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/iv_pick_image"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_recipe_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/recipe_description_hint"
            android:inputType="textCapSentences"
            android:maxWidth="250dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/et_recipe_name"
            app:layout_constraintStart_toStartOf="@+id/et_recipe_name"
            app:layout_constraintTop_toBottomOf="@+id/et_recipe_name" />

        <LinearLayout
            android:id="@+id/layout_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_recipe_description" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="170dp"
            android:layout_height="30dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/round_shape_btn"
            android:text="@string/add_ingredient"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_list" />

        <EditText
            android:id="@+id/et_full_recipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/enter_full_recipe"
            android:inputType="textMultiLine|textCapSentences"
            android:minLines="2"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbars="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_add" />

        <Button
            android:id="@+id/btn_create_recipe"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginBottom="15dp"
            android:background="@color/colorPrimary"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/create"
            android:textAllCaps="false"
            android:textColor="#fff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>